--- a/PersonalBlog.Api/PersonalBlog.Api.csproj
+++ b/PersonalBlog.Api/PersonalBlog.Api.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalBlog.Services\PersonalBlog.Services.csproj" />
+  </ItemGroup>
+
 </Project>
