add email service

--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -8,5 +8,26 @@
     }
   },
   "AllowedHosts": "*",
-  "AngularAppUrl": "http://localhost:42000"
+  "AngularAppUrl": "http://localhost:4200",
+  "EmailConfiguration": {
+    "GmailPort":  "465",
+    "GmailSmtpServer": "smtp.gmail.com",
+    "NewPostSubject": "New Post",
+    "Name": "Administration of site MyBlog",
+    "Email": "roman.myshchyshyn1999@gmail.com",
+    "Password": "Lopik@12",
+    "NewPostTemplate": [
+      "<div>",
+      "<h3>Check out new post: </h3>",
+      "<h1>",
+      "<a href=\"#URL\">",
+      "#TITLE",
+      "</a>",
+      "</h1>",
+      "<h2>",
+      "#DESCRIPTION",
+      "</h2>",
+      "</div>"
+    ]
+  }
 }
