--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
   "AngularAppUrl": "http://localhost:4200",
   "EmailConfiguration": {
-    "GmailPort":  "465",
+    "GmailPort": "465",
     "GmailSmtpServer": "smtp.gmail.com",
     "NewPostSubject": "New Post",
     "Name": "Administration of site MyBlog",
@@ -29,5 +29,10 @@
       "</h2>",
       "</div>"
     ]
+  },
+  "AdminAccount": {
+    "Name": "admin",
+    "Email": "admin@gmail.com",
+    "Password":  "admin"
   }
 }
