--- a/PersonalBlog.Services/PersonalBlog.Services.csproj
+++ b/PersonalBlog.Services/PersonalBlog.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.1.5.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
