--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=personalblogdb;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=personalblogdb;Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
