--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -30,9 +30,14 @@
       "</div>"
     ]
   },
+  "Data": {
+    "Posts": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleNames.txt",
+    "UsersRatings": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleRatings.mat",
+    "UsersRatingsVariableName": "Y"
+  },
   "AdminAccount": {
     "Name": "admin",
     "Email": "admin@gmail.com",
-    "Password":  "admin"
+    "Password": "admin"
   }
 }
