Add features and weights mapping

--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -31,9 +31,12 @@
     ]
   },
   "Data": {
-    "Posts": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleNames.txt",
-    "UsersRatings": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleRatings.mat",
-    "UsersRatingsVariableName": "Y"
+    "PostsPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleNames.txt",
+    "UsersRatingsPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleRatings.mat",
+    "UsersRatingsVariable": "Y",
+    "TrainedDataPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\trainedData.mat",
+    "TrainedDataFeaturesVariable": "X",
+    "TrainedDataWeightsVariable":  "Theta"
   },
   "AdminAccount": {
     "Name": "admin",
