--- a/PersonalBlog.Api/appsettings.json
+++ b/PersonalBlog.Api/appsettings.json
@@ -33,11 +33,14 @@
   "Data": {
     "PostsPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleNames.txt",
     "UsersRatingsPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\articleRatings.mat",
-    "UsersRatingsVariable": "Y",    
+    "UsersRatingsVariable": "Y",
     "IsRatedMatrixVariable": "R",
     "TrainedDataPath": "D:\\DUPLOM\\rs2\\recommenderSystem\\trainedData.mat",
     "TrainedDataFeaturesVariable": "X",
-    "TrainedDataWeightsVariable": "Theta"
+    "TrainedDataWeightsVariable": "Theta",
+    "TrainedDataMeanPostsRatesValuesVariable": "Ymean",
+    "FeaturesNumber": "5",
+    "Lambda": "0,001"
   },
   "AdminAccount": {
     "Name": "admin",
